--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,1 +1,26 @@
-/* No CSS *//*# sourceMappingURL=estilos.css.map */
+:root {
+  --soft-blue: hsl(215, 51%, 70%);
+  --cyan: hsl(178, 100%, 50%);
+  --very-dark-blue-main: hsl(217, 54%, 11%);
+  --very-dark-blue-card: hsl(216, 50%, 16%);
+  --very-dark-blue-line: hsl(215, 32%, 27%);
+  --white: hsl(0, 0%, 100%);
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  font-family: "Outfit", sans-serif;
+  background-color: var(--very-dark-blue-main);
+}
+/*# sourceMappingURL=estilos.css.map */
