fix: move the text-date class inside of the body with sass

--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -45,10 +45,10 @@ body {
 	&-body {
 		display: flex;
 		flex-direction: column;
-	}
 
-	&-body-text-date {
-		display: flex;
-		justify-content: space-between;
+		&-text-date {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 }
