--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,6 +63,19 @@ body {
           flex-direction: column;
 }
 
+.card-body-title {
+  font-size: 2rem;
+  color: var(--white);
+  padding-top: 5px;
+  font-weight: 700;
+}
+
+.card-body-text {
+  font-size: 1.6rem;
+  color: var(--soft-blue);
+  font-weight: 300;
+}
+
 .card-body-text-date {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,5 +83,34 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.card-body-text-date div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.card-body-text-date span {
+  padding-left: 5px;
+  font-size: 1.4rem;
+}
+
+.card-body-text-date-iconEth {
+  width: 12px;
+  height: 18px;
+}
+
+.card-body-text-date-iconClock {
+  width: 16px;
+  height: 16px;
+}
+
+.card-body-text-date-eth {
+  color: var(--cyan);
+}
+
+.card-body-text-date-sec {
+  color: var(--soft-blue);
 }
 /*# sourceMappingURL=estilos.css.map */
