--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -46,9 +46,47 @@ body {
 		display: flex;
 		flex-direction: column;
 
-		&-text-date {
-			display: flex;
-			justify-content: space-between;
+		&-title {
+			font-size: 2rem;
+			color: var(--white);
+			padding-top: 5px;
+			font-weight: 700;
+		}
+
+		&-text {
+			font-size: 1.6rem;
+			color: var(--soft-blue);
+			font-weight: 300;
+
+			&-date {
+				display: flex;
+				justify-content: space-between;
+
+				div {
+					display: flex;
+				}
+
+				span {
+					padding-left: 5px;
+					font-size: 1.4rem;
+				}
+
+				&-iconEth {
+					width: 12px;
+					height: 18px;
+				}
+				&-iconClock {
+					width: 16px;
+					height: 16px;
+				}
+
+				&-eth {
+					color: var(--cyan);
+				}
+				&-sec {
+					color: var(--soft-blue);
+				}
+			}
 		}
 	}
 }
