--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -105,6 +105,8 @@ body {
 					span {
 						margin-left: 1rem;
 						margin-top: 1rem;
+						font-size: 1.4rem;
+						color: var(--soft-blue);
 					}
 				}
 			}
