--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -33,7 +33,8 @@ body {
 		width: 326px;
 		border-radius: 16px;
 		overflow: hidden;
-		box-shadow: 5px 5px 10px var(--very-dark-blue-card);
+		box-shadow: 0px 30px 10px var(--very-dark-blue-main),
+			0px 40px 50px var(--very-dark-blue-card);
 		padding: 24px;
 
 		&-header {
