add: add a color and a pointer for the title

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,6 +71,11 @@ body .card-body-title {
   font-weight: 700;
 }
 
+body .card-body-title:hover {
+  color: var(--cyan);
+  cursor: pointer;
+}
+
 body .card-body-text {
   font-size: 1.6rem;
   color: var(--soft-blue);
