--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -52,6 +52,10 @@ body {
 				color: var(--white);
 				padding-top: 1rem;
 				font-weight: 700;
+				&:hover {
+					color: var(--cyan);
+					cursor: pointer;
+				}
 			}
 
 			&-text {
