--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -117,6 +117,10 @@ body {
 						span {
 							margin-left: 0;
 							color: var(--white);
+							&:hover {
+								color: var(--cyan);
+								cursor: pointer;
+							}
 						}
 					}
 				}
