--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -37,9 +37,40 @@ body {
 			0px 40px 50px var(--very-dark-blue-card);
 		padding: 24px;
 
-		&-header {
-			width: 100%;
-			border-radius: 8px;
+		&-container {
+			// img-top es card-container
+			overflow: hidden;
+			position: relative;
+
+			img {
+				width: 100%;
+				border-radius: 8px;
+				display: block;
+			}
+
+			&-overlay {
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				background-color: var(--cyan);
+				opacity: 0.5;
+				display: none;
+
+				img {
+					position: absolute;
+					width: 50px;
+					left: 50%;
+					top: 50%;
+					transform: translate(-50%, -50%);
+				}
+			}
+			&:hover {
+				div {
+					display: block;
+				}
+			}
 		}
 
 		&-body {
